fix scrollbar add rotate buttons markup

--- a/css/macOSScrollbar.css
+++ b/css/macOSScrollbar.css
@@ -1,3 +1,7 @@
+.scrollbar {
+	overflow: overlay;
+}
+
 /* total width */
 .scrollbar::-webkit-scrollbar {
 	background-color: rgba(0, 0, 0, 0);
@@ -23,11 +27,11 @@
 	display: none;
 }
 
-/* scrollbar when element is hovered */
+/* scrollbar when element is hovered 
 .scrollbar:hover::-webkit-scrollbar-thumb {
 	background-color: rgba(160, 160, 165, 0.5);
-	/*border: 4px solid rgba(255, 255, 255, 0.3);*/
-}
+	border: 4px solid rgba(255, 255, 255, 0.3);
+}*/
 
 /* scrollbar when scrollbar is hovered */
 .scrollbar::-webkit-scrollbar-thumb:hover {
@@ -45,7 +49,6 @@
 		border-radius: 4px;
 	}
 
-	.scrollbar:hover::-webkit-scrollbar-thumb,
 	.scrollbar::-webkit-scrollbar-thumb:hover {
 		border: none;
 	}
